--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AppliCPOA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\poncho\\Desktop\\IUT\\com.mysql.jdbc_5.1.5.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\poncho\\Desktop\\TPJTableMysql\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
