--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/AppliCPOA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\poncho\\Desktop\\IUT\\com.mysql.jdbc_5.1.5.jar
+file.reference.commons-net-3.5-sources.jar=C:\\Users\\poncho\\Desktop\\commons-net-3.5-sources.jar
+file.reference.commons-net-3.5.jar=C:\\Users\\poncho\\Desktop\\commons-net-3.5.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\poncho\\Desktop\\TPJTableMysql\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${file.reference.com.mysql.jdbc_5.1.5.jar}
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
+    ${file.reference.commons-net-3.5.jar}:\
+    ${file.reference.commons-net-3.5-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
