--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=C:\\Users\\poncho\\Desktop\\IUT\\com.mysql.jdbc_5.1.5.jar
 file.reference.commons-net-3.5-sources.jar=C:\\Users\\poncho\\Desktop\\commons-net-3.5-sources.jar
 file.reference.commons-net-3.5.jar=C:\\Users\\poncho\\Desktop\\commons-net-3.5.jar
+file.reference.commons-net-3.5.jar-1=commons-net-3.5.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\poncho\\Desktop\\TPJTableMysql\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
@@ -37,7 +38,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
     ${file.reference.commons-net-3.5.jar}:\
-    ${file.reference.commons-net-3.5-sources.jar}
+    ${file.reference.commons-net-3.5-sources.jar}:\
+    ${file.reference.commons-net-3.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
